# lattice_deform

./: .gitignore  CMakeLists.txt  README.md  main.cpp  window.cpp  window.h
Internship/: Model.cpp  Model.h
Internship/Deform/: BoundingBox.cpp  BoundingBox.h  Deform.h
Internship/Deform/SpatialViews/: KDTree3D.cpp  KDTree3D.h  UniformGrid.cpp  UniformGrid.h
Internship/Demo/: Window.cpp  Window.h
Internship/ObjIO/: ObjIO.cpp  ObjIO.h  ReadHelpers.cpp  ReadHelpers.h  WriteHelpers.cpp  WriteHelpers.h
Internship/Rendering/: Camera.cpp  Camera.h  Conversion.cpp  Conversion.h
Internship/Rendering/OpenGL/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
Lattice/: Conversion.cpp  Conversion.h  Model.cpp  Model.h
Lattice/Deform/: BoundingBox.cpp  BoundingBox.h  Deform.h
Lattice/Deform/SpatialViews/: KDTree3D.cpp  KDTree3D.h  UniformGrid.cpp  UniformGrid.h
Lattice/Demo/: Window.cpp  Window.h
Lattice/ObjIO/: ObjIO.cpp  ObjIO.h  ReadHelpers.cpp  ReadHelpers.h  WriteHelpers.cpp  WriteHelpers.h
Lattice/Rendering/: Camera.cpp  Camera.h  Conversion.cpp  Conversion.h
Lattice/Rendering/OpenGL/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
R3DS/: Model.cpp  Model.h
R3DS/Deform/: BoundingBox.cpp  BoundingBox.h  Deform.h
R3DS/Deform/SpatialViews/: KDTree3D.cpp  KDTree3D.h  UniformGrid.cpp  UniformGrid.h
R3DS/ObjIO/: ObjIO.cpp  ObjIO.h  ReadHelpers.cpp  ReadHelpers.h  WriteHelpers.cpp  WriteHelpers.h
R3DS/Rendering/: Camera.cpp  Camera.h  Conversion.cpp  Conversion.h
R3DS/Rendering/OpenGL/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
Test/: Conversion.cpp  Deform.cpp  ObjIO.cpp
data/shaders/: main.frag  main.vert
